--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 	</header>
 
 	<section id="about">
+		<h2>About Me</h2>
 		<div class="container">
 			<div class="bio">
-				<h2>Jane Doe</h2>
-				<h3>I breed adorable cows.</h3>
+				<h3>Jane Doe</h3>
+				<h4>I breed adorable cows.</h4>
 				<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Aenean lacinia bibendum nulla sed consectetur. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nulla vitae elit libero, a pharetra augue. Sed posuere consectetur est at lobortis.</p>
 			</div>
 			<div class="profile">
@@ -39,15 +40,59 @@
 	</section>
 
 	<section id="education">
-		
+		<h2>Education</h2>
+		<div class="container flex">
+			<div class="education-item">
+				<div class="school-details">
+					<h3>School Name</h3>
+					<h4>2014 - 2017</h4>
+				</div>
+				<div class="degree-details">
+					<h4>Major Name</h4>
+					<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				</div>
+			</div>
+			<div class="education-item">
+				<div class="school-details">
+					<h3>School Name</h3>
+					<h4>2014 - 2017</h4>
+				</div>
+				<div class="degree-details">
+					<h4>Major Name</h4>
+					<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				</div>
+			</div>
+			<div class="education-item">
+				<div class="school-details">
+					<h3>School Name</h3>
+					<h4>2014 - 2017</h4>
+				</div>
+				<div class="degree-details">
+					<h4>Major Name</h4>
+					<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<section id="experience">
-		
+		<div class="container">
+			<h2>Experience</h2>
+			<div class="experience-item flex">
+				<div class="company-details">
+					<h3>Company Name</h3>
+					<h4>2014 - 2017</h4>
+				</div>
+				<div class="job-details">
+					<h4>Job Title</h4>
+					<p>Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum id ligula porta felis euismod semper. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+				</div>
+			</div><!--.experience-item-->
+		</div><!--.container-->
 	</section>
 
 	<section id="portfolio">
-		
+		<h2>Portfolio</h2>
 	</section>
 
 	<section id="contact">
