Better curb appeal

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 		</div>
 	</header>
 
+	<section class="hero flex align-middle">
+		<div class="container">
+			<h2>Pharetra Adipiscing Purus Ornare Inceptos</h2>
+			<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+			<a class="button" href="#">Call to Action</a>
+		</div>
+	</section>
+
 	<section id="about">
 		<h2>About Me</h2>
 		<div class="container">
@@ -92,7 +100,19 @@
 	</section>
 
 	<section id="portfolio">
-		<h2>Portfolio</h2>
+		<div class="container">
+			<h2>Portfolio</h2>
+			<div class="flex">
+				<div class="portfolio-item">
+					<figure>
+						<img src="http://placehold.it/350x350">
+						<figcaption>
+							<h3>Portfolio Name</h3>
+						</figcaption>
+					</figure>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<section id="contact">
