--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Oswald:400,700|Pacifico" rel="stylesheet">
+	<script src="https://use.fontawesome.com/53a0e731d4.js"></script>
 </head>
 <body>
 	<header>
@@ -115,9 +116,15 @@
 		</div>
 	</section>
 
-	<section id="contact">
-		
-	</section>
+	<footer id="contact">
+		<div class="container">
+			<ul class="social flex">
+				<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+				<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+				<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+			</ul>
+		</div>
+	</footer>
 
 </body>
 </html>
